--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 html,
 body,
@@ -126,4 +128,23 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+html {
+    background-color: #ffffff;
+    font-family: "Inter", sans-serif;
+}
+
+.header {
+    background-color: #2176ff;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    position: fixed;
+    top: 0;
+    border-radius: 0 0 10px 10px;
+    z-index: 10;
 }
